tests/negative/req11/secret_to_write_stderr.mvl
// corpus:expect-fail
// expect-requirement: 11
// Scenario: write(stderr(), secret) — stderr fd is a public sink just like stdout.
//           Passing a Secret[String] argument must be rejected.
// Triggers: CheckError::LoggingLabelViolation (req11)

use std.io.{Fd, IoError}

fn main() -> Unit ! Console {
    let token: Secret[String] = "bearer-xyz";
    let _: Result[Unit, IoError] = write(stderr(), token);
}
